# talkbot

./: .env .default  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
bot/: __main__.py  app.py  config.py
bot/data/: Албак.csv  Албак.txt  Аль-Манифа.csv  Аль-Манифа.txt  Венера.csv  Венера.txt  Екатерина_II.csv  Екатерина_II.txt  Зарубинский_проезд.csv  Зарубинский_проезд.txt  Иван_Грозный.csv  Иван_Грозный.txt  Марс.csv  Марс.txt  Меркурий.csv  Меркурий.txt  Николай_II.csv  Николай_II.txt  Пётр_I.csv  Пётр_I.txt  Юпитер.csv  Юпитер.txt
bot/guide/: answer.py  corpusadmin.py  talkmanager.py  user.py  wikiload.py
bot/messages/: start.txt  Без имени 1.odt
